--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react": "^16.8.1",
     "react-apollo": "^2.4.1",
     "react-dom": "^16.8.1",
+    "react-redux": "^6.0.0",
     "react-scripts": "2.1.3",
+    "redux": "^4.0.1",
     "styled-components": "^4.1.3"
   },
   "scripts": {
